notebook cleanup and some small fixes

--- a/src/main/ipy/SmallFiles.ipynb
+++ b/src/main/ipy/SmallFiles.ipynb
@@ -50,7 +50,7 @@
       "The required configuration to use the scripts are a working <em>dCache</em> version 2.6.3 or higher installation. The pools that store the small files have to be configured with <pre>lfs=none</pre> and the machines running the pools need to be able to access the <em>Chimera</em> DB using <tt>psql</tt>. Their size should be big enough to store all the new files for at least one day. They must have the <tt>dcap</tt>\n",
       "libraries installed. \n",
       "\n",
-      "The work station that produces the files needs to mount <em>Chimera</em> via <em>NFS4.1</em>."
+      "The work station that packs the files needs to mount <em>Chimera</em> via <em>NFS4.1</em>."
      ]
     },
     {
@@ -59,6 +59,13 @@
      "metadata": {},
      "source": [
       "Installation"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "All files needed can be obtained via the git repository https://github.com/kschwank/SmallFiles\n"
      ]
     },
     {
@@ -132,7 +139,7 @@
       "1. set max restore handlers to 2 or higher (<tt>rh set max active 2</tt> in admin interface)\n",
       "1. configure the HSM <tt>dcache</tt> for your site on the pool in the admin interface\n",
       "    1. <code>hsm set dcache -hsmBase=hsm</code>\n",
-      "    1. <code>hsm set dcache -command=/usr/share/dcache/lib/hsm-internal.sh</code>\n",
+      "    1. <code>hsm set dcache -command=/usr/share/dcache/lib/hsm-internal-[by-dir|by-group].sh</code>\n",
       "    1. <code>hsm set dcache -dataRoot=/data</code>\n",
       "    1. <code>save</code>\n",
       "1. configure the HSM for the archive files\n",
@@ -907,159 +914,6 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Observed Exceptions"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {},
-     "source": [
-      "\"Handle is closed\""
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "While packing output like the following was observed on client side \n",
-      "<pre>\n",
-      "zip I/O error: Permission denied\n",
-      "zip error: Could not create output file (/pnfs/4/speedtest/8M/100000.zip)\n",
-      "</pre>\n",
-      "On the server side (pool), this caused the following log entry"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "\\begin{verbatim}\n",
-      "\n",
-      "04 Sep 2013 13:08:00 (dcache-lab001-A) [door:nfsv41@nfs:1378289135026 nfsv41 PoolAcceptFile 0000BD16933DE4AE43968338D15638CE80C1] Transfer failed in post-processing. Please report this bug to support@dcache.org.\n",
-      "java.lang.IllegalStateException: Handle is closed\n",
-      "\tat org.dcache.pool.repository.v5.WriteHandleImpl.close(WriteHandleImpl.java:377) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.DefaultPostTransferService$1.run(DefaultPostTransferService.java:108) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.util.FireAndForgetTask.run(FireAndForgetTask.java:31) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.util.CDCExecutorServiceDecorator$1.run(CDCExecutorServiceDecorator.java:106) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1145) ~[na:1.7.0_25]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:615) ~[na:1.7.0_25]\n",
-      "\tat java.lang.Thread.run(Thread.java:724) ~[na:1.7.0_25]\n",
-      "\n",
-      "\\end{verbatim}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "and another entry in the billing cell:"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "\\begin{verbatim}\n",
-      "\n",
-      "03 Sep 2013 11:45:03 (billing) [door:nfsv41@nfs:1378200573206 dcache-lab001-A] 09.03 11:43:52 [pool:dcache-lab001-A:transfer] [0000176F7A12A5164CF8978EB1BC89228EEF,25560690164] [Unknown] <Unknown>:<Unknown>@osm 25560692880 930297 true {NFS4-4.1:/131.169.72.192:1002} [door:nfsv41@nfs:1378200573206-1378200573206] {100\n",
-      "11:\"Transfer failed due to unexpected exception: Handle is closed\"}\n",
-      "\n",
-      "\\end{verbatim}"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {},
-     "source": [
-      "OutOfMemoryError"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Also during packing (zip), two different <tt>OutOfMemoryErrors</tt> were observed on one of the pools"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "\\begin{verbatim}\n",
-      "\n",
-      "05 Sep 2013 08:05:10 (c-dCacheDomain-101-102) [] Uncaught exception in thread pool-16-thread-4\n",
-      "java.lang.OutOfMemoryError: unable to create new native thread\n",
-      "\tat java.lang.Thread.start0(Native Method) ~[na:1.7.0_25]\n",
-      "\tat java.lang.Thread.start(Thread.java:693) ~[na:1.7.0_25]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.addWorker(ThreadPoolExecutor.java:949) ~[na:1.7.0_25]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.execute(ThreadPoolExecutor.java:1371) ~[na:1.7.0_25]\n",
-      "\tat org.dcache.util.CDCExecutorServiceDecorator.execute(CDCExecutorServiceDecorator.java:93) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.DefaultPostTransferService.execute(DefaultPostTransferService.java:91) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.movers.AbstractMover.postprocess(AbstractMover.java:174) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.SimpleIoScheduler$3.postprocess(SimpleIoScheduler.java:308) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.SimpleIoScheduler$3.failed(SimpleIoScheduler.java:303) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.SimpleIoScheduler$3.failed(SimpleIoScheduler.java:290) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.util.TryCatchTemplate.fail(TryCatchTemplate.java:135) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.util.TryCatchTemplate.completed(TryCatchTemplate.java:100) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.chimera.nfsv41.mover.NfsTransferService$1.cancel(NfsTransferService.java:115) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.util.TryCatchTemplate.cancel(TryCatchTemplate.java:88) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.SimpleIoScheduler$PrioritizedRequest.kill(SimpleIoScheduler.java:437) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.SimpleIoScheduler.cancel(SimpleIoScheduler.java:236) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.SimpleIoScheduler.cancel(SimpleIoScheduler.java:202) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.PoolV4.mover_kill(PoolV4.java:2010) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.pool.classic.PoolV4.messageArrived(PoolV4.java:1017) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat sun.reflect.GeneratedMethodAccessor36.invoke(Unknown Source) ~[na:na]\n",
-      "\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43) ~[na:1.7.0_25]\n",
-      "\tat java.lang.reflect.Method.invoke(Method.java:606) ~[na:1.7.0_25]\n",
-      "\tat org.dcache.cells.CellMessageDispatcher$ShortReceiver.deliver(CellMessageDispatcher.java:288) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.cells.CellMessageDispatcher.call(CellMessageDispatcher.java:201) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat org.dcache.cells.AbstractCell.messageArrived(AbstractCell.java:899) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.cells.nucleus.CellAdapter.messageArrived(CellAdapter.java:981) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.cells.nucleus.CellNucleus$DeliverMessageTask.innerRun(CellNucleus.java:1032) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.cells.nucleus.CellNucleus$AbstractNucleusTask.run(CellNucleus.java:941) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1145) ~[na:1.7.0_25]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:615) ~[na:1.7.0_25]\n",
-      "\tat java.lang.Thread.run(Thread.java:724) ~[na:1.7.0_25]\n",
-      "\n",
-      "\\end{verbatim}"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "\\begin{verbatim}\n",
-      "\n",
-      "05 Sep 2013 08:54:01 (c-dCacheDomain-101-102) [] Fatal JVM error\n",
-      "java.lang.OutOfMemoryError: unable to create new native thread\n",
-      "\tat java.lang.Thread.start0(Native Method) ~[na:1.7.0_25]\n",
-      "\tat java.lang.Thread.start(Thread.java:693) ~[na:1.7.0_25]\n",
-      "\tat org.dcache.pool.repository.RepositoryInterpreter.ac_rep_ls_$_0_99(RepositoryInterpreter.java:291) ~[dcache-core-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat sun.reflect.GeneratedMethodAccessor43.invoke(Unknown Source) ~[na:na]\n",
-      "\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43) ~[na:1.7.0_25]\n",
-      "\tat java.lang.reflect.Method.invoke(Method.java:606) ~[na:1.7.0_25]\n",
-      "\tat dmg.util.command.AcCommandExecutor.execute(AcCommandExecutor.java:157) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.util.CommandInterpreter$CommandEntry.execute(CommandInterpreter.java:385) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.util.CommandInterpreter.execute(CommandInterpreter.java:281) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.util.CommandInterpreter.command(CommandInterpreter.java:215) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.cells.nucleus.CellAdapter.executeLocalCommand(CellAdapter.java:1020) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.cells.nucleus.CellAdapter.messageArrived(CellAdapter.java:939) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.cells.nucleus.CellNucleus$DeliverMessageTask.innerRun(CellNucleus.java:1032) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat dmg.cells.nucleus.CellNucleus$AbstractNucleusTask.run(CellNucleus.java:941) ~[cells-2.7.0-SNAPSHOT.jar:2.7.0-SNAPSHOT]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1145) ~[na:1.7.0_25]\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:615) ~[na:1.7.0_25]\n",
-      "\tat java.lang.Thread.run(Thread.java:724) ~[na:1.7.0_25]\n",
-      "\n",
-      "\\end{verbatim}"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
       "Possible enhancements"
      ]
     },
@@ -1078,22 +932,6 @@
       "    1. <tt>tar cWhf arc.tar /tmp/links/*</tt> - this takes much longer (factor 3 on a desktop machine)\n",
       "    1. <tt>tar -dhf arc.tar /tmp/links/*</tt> - takes about the same time as <tt>W</tt>\n",
       "1. Have different scripts with different parameters for different directories"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Remaining problems"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "1. Interrupting <tt>pack-files.sh</tt> while collecting files might cause the machine to crash.\n",
-      "1. Sometimes dCache refuses to accept more files for a couple of seconds"
      ]
     },
     {
