--- a/src/main/ipy/sf-patch_for_pool_node.ipynb
+++ b/src/main/ipy/sf-patch_for_pool_node.ipynb
@@ -263,6 +263,13 @@
      "source": [
       "When you are finished, don't forget to <tt>save</tt>!"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To increase the file input rate to your pools, you may want to switch of checksums on write. To do so, edit the <tt>setup</tt> file in your pool's directory and set <br/> <code>csm set policy -onwrite=off</code>"
+     ]
     }
    ],
    "metadata": {}
