delete old files
- remove nailgun, dcache submodules
- remove old scripts
- remove scala chimera files
- update msc diagrams
- remove scala, nailgun, smallfiles jars

--- a/src/main/ipy/sf-patch_for_head_node.ipynb
+++ b/src/main/ipy/sf-patch_for_head_node.ipynb
@@ -11,34 +11,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "First we will create the directory structure for the SmallFiles scripts for creating the archives.\n",
-      "Set <tt>dataRoot</tt> to the directory to create the structure in!"
+      "First we will create the directory structure for the SmallFiles scripts to write the archives into. You can configure this freely. Just make sure that the files are NOT written into a subdirectory below the smallfiles directory. You can also create several locations to store archives."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%%bash\n",
-      "dataRoot=/data\n",
-      "chimera-cli mkdir ${dataRoot}\n",
-      "chimera-cli mkdir ${dataRoot}/hsm\n",
-      "chimera-cli mkdir ${dataRoot}/hsm/archives\n",
-      "chimera-cli writetag ${dataRoot}/hsm/archives AccessLatency NEARLINE\n",
-      "chimera-cli writetag ${dataRoot}/hsm/archives RetentionPolicy CUSTODIAL\n",
-      "chimera-cli mkdir ${dataRoot}/hsm/requests\n",
-      "chimera-cli writetag ${dataRoot}/hsm/requests AccessLatency ONLINE\n",
-      "chimera-cli writetag ${dataRoot}/hsm/requests RetentionPolicy REPLICA"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Then we will create the directories that will hold the small files:"
+      "Then we will assign the neccessary tags to the directories that will hold the small files. Again, you can have several distinct locations, but you will have to set the following tags for all of them."
      ]
     },
     {
@@ -46,13 +26,12 @@
      "collapsed": false,
      "input": [
       "%%bash\n",
-      "dataRoot=/data\n",
-      "chimera-cli mkdir ${dataRoot}/smallfiles\n",
-      "chimera-cli writetag ${dataRoot}/smallfiles sGroup \"smallfiles\"\n",
-      "chimera-cli writetag ${dataRoot}/smallfiles OSMTemplate \"StoreName tar\"\n",
-      "chimera-cli writetag ${dataRoot}/smallfiles hsmInstance \"dcache\"\n",
-      "chimera-cli writetag ${dataRoot}/smallfiles AccessLatency NEARLINE\n",
-      "chimera-cli writetag ${dataRoot}/smallfiles RetentionPolicy CUSTODIAL"
+      "smallfilesRoot=/data/smallfiles\n",
+      "chimera-cli writetag ${smallfilesRoot} sGroup \"smallfiles\"\n",
+      "chimera-cli writetag ${smallfilesRoot} OSMTemplate \"StoreName archive\"\n",
+      "chimera-cli writetag ${smallfilesRoot} hsmInstance \"dcache\"\n",
+      "chimera-cli writetag ${smallfilesRoot} AccessLatency NEARLINE\n",
+      "chimera-cli writetag ${smallfilesRoot} RetentionPolicy CUSTODIAL"
      ],
      "language": "python",
      "metadata": {},
