--- a/src/main/ipy/sf-patch_for_pool_node.ipynb
+++ b/src/main/ipy/sf-patch_for_pool_node.ipynb
@@ -54,23 +54,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We need to update the submodules in both cases"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "!cd SmallFiles; git submodule update"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "Now, we checkout the matching branch"
      ]
     },
@@ -78,24 +61,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!cd SmallFiles; git checkout 2.6"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "We now need to build the Nailgun libraries for your platform:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "!cd SmallFiles/nailgun; make; make install"
+      "!cd SmallFiles; git checkout use-mongodb/2.6"
      ],
      "language": "python",
      "metadata": {},
@@ -130,56 +96,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The SmallFiles Add-on consists of several libraries and scripts. These are in the order of the followin installation:\n",
+      "The SmallFiles Add-on consists of several scripts. These are in the order of the following installation:\n",
       "\n",
-      "1. Scala libraries\n",
-      "1. Nailgun libraries\n",
       "1. HSM scripts"
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%%bash\n",
-      "BIN_DIR=/usr/local/bin\n",
-      "LIB_DIR=/usr/local/lib\n",
-      "\n",
-      "cp SmallFiles/nailgun/ng ${BIN_DIR}/\n",
-      "cp SmallFiles/src/skel/usr/local/bin/run-ng-server ${BIN_DIR}/\n",
-      "cp SmallFiles/src/skel/usr/local/bin/loadChimeraNailgun.sh ${BIN_DIR}/\n",
-      "cp SmallFiles/src/skel/usr/local/bin/createNGlinks.sh ${BIN_DIR}/\n",
-      "cp SmallFiles/src/skel/usr/local/lib/scala-library* ${LIB_DIR}/\n",
-      "cp SmallFiles/src/skel/usr/local/lib/nailgun-server* ${LIB_DIR}/\n",
-      "cp SmallFiles/src/skel/usr/local/lib/dcache-smallfiles* ${LIB_DIR}/\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Create symlinks to <tt>ng</tt>:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "!sh /usr/local/bin/createNGlinks.sh /usr/local/bin /usr/local/bin/ng"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "If you want to create archives by their sGroup and OSMTemplate use <tt>hsm-internal-by-group.sh</tt> "
+      "Copy the HSM Script and the <tt>datasetPut.js</tt> script."
      ]
     },
     {
@@ -188,7 +114,8 @@
      "input": [
       "%%bash\n",
       "DCACHE_LIB=/usr/share/dcache/lib\n",
-      "cp SmallFiles/src/skel/usr/share/dcache/lib/hsm-internal-by-group.sh ${DCACHE_LIB}/"
+      "cp SmallFiles/src/skel/usr/share/dcache/lib/hsm-internal.sh ${DCACHE_LIB}/\n",
+      "cp SmallFiles/src/skel/usr/share/dcache/lib/datasetPut.js ${DCACHE_LIB}/"
      ],
      "language": "python",
      "metadata": {},
@@ -198,35 +125,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "if you want to archive them by subdirectory use <tt>hsm-internal-by-dir.sh</tt>"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%%bash\n",
-      "DCACHE_LIB=/usr/share/dcache/lib\n",
-      "cp SmallFiles/src/skel/usr/share/dcache/lib/hsm-internal-by-dir.sh ${DCACHE_LIB}/"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Now, edit <tt>hsm-internal-*</tt> to your needs. Namely set\n",
+      "Now, edit <tt>hsm-internal.sh</tt> to your needs. Namely set\n",
       "\n",
       "1. <tt>LOG</tt> to be used as logfile (the default is probably fine) <br>\n",
       "1. <tt>AWK</tt> to your awk binary (the default is probably fine) <br>\n",
       "1. <tt>LIBPDCAP</tt> to the dcap library (the default is probably fine)\n",
-      "1. <tt>DCAP_DOOR</tt> to your dCache's dcap door (you probably have to change this!)\n",
-      "1. <tt>CHIMERA_PARAMS</tt> to reflect the parameters needed to connect to the chimera database:\n",
-      "The parameter string consists of 5 values: <br>\n",
-      "<tt>\"{driver} {db_url} {db_dialect} {user} {password}\"</tt> <br>\n",
-      "Most values are probably fine, except for the db_url and the password (if you set one)."
+      "1. <tt>DCAP_DOOR</tt> to your dCache's dcap door (you probably have to change this!)"
      ]
     },
     {
@@ -240,11 +144,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Configure the HSM by executing the 3 commands:\n",
+      "Configure the HSM by executing the following commands:\n",
       "\n",
-      "1. <tt>hsm set dcache -hsmBase=hsm</tt>\n",
-      "1. <tt>hsm set dcache -command=/usr/share/dcache/lib/hsm-internal-by-group.sh</tt> # or hsm-internal-by-dir.sh\n",
-      "1. <tt>hsm set dcache -dataRoot=/data</tt>"
+      "1. <tt>hsm set dcache -command=/usr/share/dcache/lib/hsm-internal.sh</tt>\n",
+      "1. <tt>hsm set dcache -mongoUrl=mongohost/smallfiles</tt>"
      ]
     },
     {
