--- a/src/main/ipy/sf-patch_on_packer.ipynb
+++ b/src/main/ipy/sf-patch_on_packer.ipynb
@@ -1,169 +1,174 @@
 {
  "metadata": {
-  "name": "sf-patch_on_packer"
- }, 
- "nbformat": 2, 
+  "name": ""
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
-     "cell_type": "markdown", 
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
       "This Document leads you through the installation of the packing node for the dCache SmallFiles patch."
      ]
-    }, 
+    },
     {
-     "cell_type": "markdown", 
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
       "First we will get all the needed files from the public repository on github. Make sure you have installed <tt>git</tt>!"
      ]
-    }, 
+    },
     {
-     "cell_type": "code", 
-     "collapsed": true, 
+     "cell_type": "code",
+     "collapsed": true,
      "input": [
       "!git clone https://github.com/kschwank/SmallFiles.git"
-     ], 
-     "language": "python", 
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": []
-    }, 
+    },
     {
-     "cell_type": "markdown", 
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Then we check out the approprate branch:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!git checkout -b use-mongodb/2.6 origin/use-mongodb/2.6"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
       "Now we copy the scripts to their appropriate locations:"
      ]
-    }, 
+    },
     {
-     "cell_type": "code", 
-     "collapsed": true, 
+     "cell_type": "code",
+     "collapsed": true,
      "input": [
-      "!cp SmallFiles/src/skel/usr/local/bin/pack-files* /usr/local/bin/", 
-      "!cp SmallFiles/src/skel/usr/local/bin/check-archives.sh /usr/local/bin/"
-     ], 
-     "language": "python", 
+      "BINDIR=/usr/local/bin\n",
+      "!cp SmallFiles/src/skel/usr/local/bin/pack-files.py ${BINDIR}\n",
+      "!cp SmallFiles/src/skel/usr/local/bin/filemetadata.py ${BINDIR}\n",
+      "!cp SmallFiles/src/skel/usr/local/bin/writebfids.py ${BINDIR}"
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": []
-    }, 
+    },
     {
-     "cell_type": "markdown", 
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
       "Next we will create a mountpoint for the nfs export of the dCache server"
      ]
-    }, 
+    },
     {
-     "cell_type": "code", 
-     "collapsed": true, 
+     "cell_type": "code",
+     "collapsed": true,
      "input": [
       "!mkdir -p /pnfs/4"
-     ], 
-     "language": "python", 
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": []
-    }, 
+    },
     {
-     "cell_type": "markdown", 
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
-      "And then mount the nfs export to that location.", 
+      "And then mount the nfs export to that location.\n",
       "Make sure you edit this to match your setup and make sure the server is running!"
      ]
-    }, 
+    },
     {
-     "cell_type": "code", 
-     "collapsed": true, 
+     "cell_type": "code",
+     "collapsed": true,
      "input": [
       "!mount -o intr,minorversion=1 ceph-mon1:/data /pnfs/4"
-     ], 
-     "language": "python", 
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": []
-    }, 
+    },
     {
-     "cell_type": "markdown", 
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
       "Here you can check, if you see the files you expect in the nfs mount:"
      ]
-    }, 
+    },
     {
-     "cell_type": "code", 
-     "collapsed": false, 
+     "cell_type": "code",
+     "collapsed": false,
      "input": [
       "!ls -l /pnfs/4"
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "total 2", 
-        "drwxr-xr-x 4 root root 512 Nov 15 10:52 hsm", 
-        "drwxr-xr-x 2 root root 512 Nov 15 11:53 smallfiles", 
-        "drwxr-xr-x 2 root root 512 Nov 15 10:51 user"
-       ]
-      }
-     ], 
-     "prompt_number": 2
-    }, 
-    {
-     "cell_type": "markdown", 
-     "source": [
-      "Finally, we create an entry in your systems crontab file to periodically start the packing script. The parameters of the pack-files script have the following meanings:", 
-      "", 
-      "1. nfs export directory", 
-      "1. local mount point", 
-      "1. directory for the small files hsm", 
-      "1. target size for the archives", 
-      "1. time period after which remaining files are collected and archived, independent of their combined size"
-     ]
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [
-      "!echo '*  *  *  *  *   root     /usr/local/bin/pack-files-by-group.sh \"/data\" \"/pnfs/4\" \"hsm\" 10000000000 1440 2>&1' >> /etc/crontab"
-     ], 
-     "language": "python", 
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": []
-    }, 
+    },
     {
-     "cell_type": "markdown", 
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
-      "Your crontab file now looks like this:"
+      "Finally, we configure the packing scripts using the configuration file <tt>/etc/dcache/container.conf</tt>. \n",
+      "\n",
+      "The following will only work as root. Either make sure this script runs as root or do it manually using a console."
      ]
-    }, 
+    },
     {
-     "cell_type": "code", 
-     "collapsed": false, 
+     "cell_type": "code",
+     "collapsed": true,
      "input": [
-      "!cat /etc/crontab"
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "# /etc/crontab: system-wide crontab", 
-        "# Unlike any other crontab you don't have to run the 'crontab'", 
-        "# command to install the new version when you edit this file.", 
-        "# This file also has a username field, that none of the other crontabs do.", 
-        "#", 
-        "# generated by FAI ( scripts/BASE/20-crontab )", 
-        "", 
-        "SHELL=/bin/sh", 
-        "PATH=/sbin:/bin:/usr/sbin:/usr/bin", 
-        "", 
-        "# m h dom mon dow user  command", 
-        "50 *\t* * *\troot\t( cd / && run-parts --report /etc/cron.hourly  ) 2>&1 | grep -v -f /etc/cron.exclude/hourly", 
-        "58 2\t* * *\troot\t( cd / && run-parts --report /etc/cron.daily   ) 2>&1 | grep -v -f /etc/cron.exclude/daily", 
-        "58 14\t* * *\troot\t( cd / && run-parts --report /etc/cron.daytime ) 2>&1 | grep -v -f /etc/cron.exclude/daytime", 
-        "10 3\t* * 7\troot\t( cd / && run-parts --report /etc/cron.weekly  ) 2>&1 | grep -v -f /etc/cron.exclude/weekly", 
-        "25 3\t1 * *\troot\t( cd / && run-parts --report /etc/cron.monthly ) 2>&1 | grep -v -f /etc/cron.exclude/monthly", 
-        "", 
-        "*  *  *  *  *   root    /usr/local/bin/pack-files-by-group.sh \"/data\" \"/pnfs/4\" \"hsm\" 10000000000 1440 2>&1"
-       ]
-      }
-     ], 
-     "prompt_number": 3
+      "!mkdir /etc/dcache\n",
+      "!cp SmallFiles/src/skel/etc/dcache/container.conf /etc/dcache/container.conf\n",
+      "!cat SmallFiles/src/skel/etc/dcache/container.conf"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now edit the file to your needs using the editor of your choice."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Finally start the scripts as root."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!nohup /usr/local/fillmetadata.py > /tmp/fillmetadata.log &\n",
+      "!nohup /usr/local/pack-files.py > /tmp/pack-files.log &\n",
+      "!nohup /usr/local/writebfids.py > /tmp/writebfids.log &"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
-   ]
+   ],
+   "metadata": {}
   }
  ]
 }
