add section about scaling

--- a/src/main/ipy/SmallFiles.ipynb
+++ b/src/main/ipy/SmallFiles.ipynb
@@ -300,6 +300,36 @@
      "level": 2,
      "metadata": {},
      "source": [
+      "Scaling"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If you have many files coming in at high rate, you may want to distribute the work load onto multiple instances, machines and databases. Distributing the work load will increase the speed, while introducing more requirements on the configuration and reduce flexibility."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If you are using multiple instances of the packing script, you have to make sure the sections inside their respective configuration do not have overlapping file patterns, otherwise files may be packed into multiple archives. The <tt>fillmetadata.sh</tt> and <tt>writebfids.sh</tt> scripts must only run as one instance per database."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The next step then is to use multiple databases, possibly on multiple servers to reduce the number of file entries in the database. This again will increase the speed of the scripts because of reduced search times on a single database. To archive this, the files have to be assigned to different <tt>hsmInstance</tt>s. For the hsmInstances then set different values for the <tt>mongoUrl</tt>.\n",
+      "If you use multiple databases, you have to run an additional instance of the <tt>fillmetadata.sh</tt> and <tt>writebfsid.sh</tt> scripts per database."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
       "Statistics"
      ]
     },
