add container.conf to Ipython notebook

--- a/src/main/ipy/SmallFiles.ipynb
+++ b/src/main/ipy/SmallFiles.ipynb
@@ -367,8 +367,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -871,6 +870,32 @@
      "input": [
       "!cat ../../skel/usr/local/bin/writebfids.py"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Example configuration"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!cat ../../skel/etc/dcache/container.conf"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
