update ipython documentation

--- a/src/main/ipy/SmallFiles.ipynb
+++ b/src/main/ipy/SmallFiles.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:755903b4ae94d8ad8fa59e58a4f521b335f287d95fa7af8187876ab2563e6721"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -177,6 +178,33 @@
       "\n",
       "and make sure they are started automatically."
      ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "On the database"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Create an index on ctime on the files database"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#> db.files.ensureIndex( { ctime: 1 }, { sparse: true } )\n",
+      "#> db.files.ensureIndex( { pnfsid: 1 }, { dropDups: true, unique: true } )"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
